# rust-specialization-blog

./: BLOG.md  Cargo.toml  README.md
trait-consumer/: Cargo.toml
trait-consumer/src/: mod.rs
trait-host/: Cargo.toml
trait-host/src/: lib.rs
trait-impl/: Cargo.toml
trait-impl/src/: lib.rs
